# taskmaster

./: .gitignore  README.md  pyproject.toml
app/: dashboard.py  database.py  main.py  models.py
app/services/: google_api.py
app/templates/: base.html  index.html
app/templates/fragments/: badge.html  focus_panel.html  interruption_form.html
