[project]
name = "taskmaster-pipefocus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "sqlmodel>=0.0.32",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 88
target-version = "py312" # Ou sua versão instalada

[tool.ruff.lint]
select = ["E", "F", "I"] # Style errors, Flakes, Isort (Import sorting)

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"